k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-manager-deployment
  labels:
    name: token-manager-deployment
    app: token-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      name: token-manager-pod
      app: token-manager
  template:
    metadata:
      name: token-manager-pod
      labels:
        name: token-manager-pod
        app: token-manager
    spec:
      containers:
        - name: token-manager
          image: token-manager:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
