k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-manager-service
  labels:
    name: token-manager-service
    app: token-manager
spec:
  type: ClusterIP
  selector:
    app: token-manager
  ports:
    - port: 3000
      targetPort: 3000
